style.css
html, body {
	width: 100%;
	height: 100%;
	background-color: #bcbcbc;
}

.navbar {
	margin-bottom: 0px;
	background-color: #333333;
	border: 0px;
}

.navbar-nav {
	margin-bottom: 0px;
	padding-bottom: 0px;
}

.nav > li > a:not(.text_link) {
	padding: 10px 15px;
}

.text-vertical-center h1 {
	padding-bottom: 0px;
}

.text-vertical-center h3 {
	padding-bottom: 15px;
	letter-spacing: 3px;
}

.text-vertical-center {
	display: table-cell;
	text-align: center;
	vertical-align: middle;
	padding-bottom: 50px;
}

.text-vertical-center h1 {
	font-size: 6em;
	color: black;
}

.text-vertical-center h3 {
	color: #000000;
	font-size: 1.25em;
}

.header {
	display: table;
	position: relative;
	width: 100%;
	height: 100%;
}

#top {	
	background: url('NY_basketball_ct.jpg') no-repeat center center scroll;
	background-size: cover;
	border-bottom: 1px solid black;
}

#more_info {
	display: table;
	position: relative;
	height: 100%;
	width: 85%;
	margin-top: 10px;
	padding-top: 40px;
}

#more_info_background {
	background: url('NY_basketball_ct_upsidedown_blur_2.jpg') no-repeat center center scroll;
	background-size: cover;
}

#myName {
	font-family: "Impact", "Palatino Linotype", "Book Antiqua", Palatino, serif;
	letter-spacing: 5px;
	margin-top: 15px;
}

h3 {
	margin-top: 10px;
}

.circle {
	display: table;
	margin: 0 auto;
}

.columnText {
	text-align: justify;
}

/*For proper alignment of input fields in modal form*/
.input-group[class*="col-"] {
	padding-right: 15px;
	padding-left: 15px;
}

.popover {
	background-color: #E74C3C;
	color: #ECF0F1;
	width: 120px;
}

.popover.right .arrow:after {
	border-right-color: #E74C3C;
}

#info_plus_menu {
	padding-bottom: 50px;
}

nav {
	
}

.nav {

}

.navbar-inverse {
	
}


.navbar-right {

}

.fa {
	
}

.link_icon {
	
}


.container {

}

#welcome_row {

}

.active {

}


#myMug {
	
}


#welcomeButton {
		
}

.welcome {
	
}

.jumbotron {

}

.footer {
	
}

